--- a/branches/branch-playground/CMakeLists.txt
+++ b/branches/branch-playground/CMakeLists.txt
@@ -42,7 +42,7 @@ ENDIF(NOT QT_FOUND)
 FIND_PACKAGE(LibXml2 REQUIRED)
 FIND_PACKAGE(LibXslt REQUIRED)
 FIND_PACKAGE(ZLIB REQUIRED)
-#FIND_PACKAGE(OpenSSL REQUIRED)
+FIND_PACKAGE(OpenSSL)
 IF(WIN32)
     FIND_PACKAGE(LibIconv REQUIRED)
 ENDIF(WIN32)
@@ -62,9 +62,8 @@ INCLUDE(FindX11)
 # do config checks
 INCLUDE(ConfigureChecks.cmake)
 
-#MACRO_BOOL_TO_01(OPENSSL_FOUND ENABLE_OPENSSL)
+MACRO_BOOL_TO_01(OPENSSL_FOUND ENABLE_OPENSSL)
 MACRO_BOOL_TO_01(X11_FOUND HAVE_X)
-#MACRO_BOOL_TO_01(ENABLE_KDE3 USE_KDE)
 
 # development or release builds
 OPTION(DEV_BUILD "Build development version" YES)
