--- a/trunk/plugins/filter/CMakeLists.txt
+++ b/trunk/plugins/filter/CMakeLists.txt
@@ -18,4 +18,6 @@ SET(filter_UICS
         ignorelistbase.ui
 )
 
+SET(filter_MESSAGE_SOURCES  ${filter_SRCS}  ${filter_UICS}  PARENT_SCOPE)
+
 SIM_ADD_PLUGIN(filter)
