--- a/trunk/plugins/forward/CMakeLists.txt
+++ b/trunk/plugins/forward/CMakeLists.txt
@@ -15,4 +15,6 @@ SET(forward_UICS
         forwardcfgbase.ui
 )
 
+SET(forward_MESSAGE_SOURCES  ${forward_SRCS}  ${forward_UICS}  PARENT_SCOPE)
+
 SIM_ADD_PLUGIN(forward)
