--- a/trunk/plugins/gpg/CMakeLists.txt
+++ b/trunk/plugins/gpg/CMakeLists.txt
@@ -36,4 +36,11 @@ SET(gpg_UICS
         ${gpg_UICS}
 )
 
+SET(gpg_MESSAGE_SOURCES  ${gpg_SRCS}  ${gpg_UICS})
+IF(NOT WIN32)
+  SET(gpg_MESSAGE_SOURCES  ${gpg_MESSAGE_SOURCES}  gpgfind.cpp gpgfindbase.ui PARENT_SCOPE)
+ELSE(NOT WIN32)
+  SET(gpg_MESSAGE_SOURCES  ${gpg_MESSAGE_SOURCES} PARENT_SCOPE)
+ENDIF(NOT WIN32)
+
 SIM_ADD_PLUGIN(gpg)
