--- a/trunk/plugins/navigate/CMakeLists.txt
+++ b/trunk/plugins/navigate/CMakeLists.txt
@@ -15,6 +15,9 @@ SET(navigate_UICS
         navcfgbase.ui
 )
 
+SET(navigate_MESSAGE_SOURCES  ${navigate_SRCS}  ${navigate_UICS}  PARENT_SCOPE)
+
 ADD_FLEX_FILES(navigate_SRCS parseurl.ll)
+
 
 SIM_ADD_PLUGIN(navigate)
