--- a/trunk/plugins/__homedir/CMakeLists.txt
+++ b/trunk/plugins/__homedir/CMakeLists.txt
@@ -19,11 +19,11 @@ SET(__homedir_HDRS
 	${__homedir_HDRS}
 )
 
-SET(__homedir_MESSAGE_SOURCES ${__homedir_SRCS} ${__homedir_UICS}  PARENT_SCOPE)
-
+SET(__homedir_MESSAGE_SOURCES ${__homedir_SRCS} ${__homedir_UICS})
 IF(NOT WIN32)
     SET(__homedir_MESSAGE_SOURCES ${__homedir_MESSAGE_SOURCES} homedircfgbase.ui homedircfg.cpp  PARENT_SCOPE)
+ELSE(NOT WIN32)
+    SET(__homedir_MESSAGE_SOURCES ${__homedir_MESSAGE_SOURCES} PARENT_SCOPE)
 ENDIF(NOT WIN32)
-
 
 SIM_ADD_PLUGIN(__homedir)
