--- a/trunk/plugins/ontop/CMakeLists.txt
+++ b/trunk/plugins/ontop/CMakeLists.txt
@@ -15,4 +15,6 @@ SET(ontop_UICS
         ontopcfgbase.ui
 )
 
+SET(ontop_MESSAGE_SOURCES  ${ontop_SRCS}  ${ontop_UICS}  PARENT_SCOPE)
+
 SIM_ADD_PLUGIN(ontop)
