--- a/trunk/plugins/update/CMakeLists.txt
+++ b/trunk/plugins/update/CMakeLists.txt
@@ -1,8 +1,3 @@
-##################
-# update library #
-##################
-IF(FALSE)
-
 SET(update_SRCS
         update.cpp
 )
@@ -11,6 +6,11 @@ SET(update_HDRS
         update.h
 )
 
-SIM_ADD_PLUGIN(update)
+SET(update_MESSAGE_SOURCES  ${update_SRCS}  PARENT_SCOPE)
 
+##################
+# update library #
+##################
+IF(FALSE)  # Update plugin is disabled in cmake builds because it really works only in noragen's MSVC builds
+  SIM_ADD_PLUGIN(update)
 ENDIF(FALSE)
