--- a/trunk/plugins/weather/CMakeLists.txt
+++ b/trunk/plugins/weather/CMakeLists.txt
@@ -18,6 +18,8 @@ SET(weather_UICS
         wifacecfgbase.ui
 )
 
+SET(weather_MESSAGE_SOURCES  ${weather_SRCS}  ${weather_UICS}  PARENT_SCOPE)
+
 ADD_JISP_ARCHIVE(jisp weather.jisp weather_SRCS)
 
 SIM_ADD_PLUGIN(weather)
