--- a/trunk/plugins/windock/CMakeLists.txt
+++ b/trunk/plugins/windock/CMakeLists.txt
@@ -1,14 +1,17 @@
+SET(windock_SRCS
+    windock.cpp
+)
+
+SET(windock_HDRS
+    windock.h
+)
+
+SET(windock_MESSAGE_SOURCES  ${windock_SRCS}  ${windock_UICS}  PARENT_SCOPE)
+
 IF(WIN32)
     ###################
     # windock library #
     ###################
-    SET(windock_SRCS
-            windock.cpp
-    )
-
-    SET(windock_HDRS
-            windock.h
-    )
 
     # some needed include dirs
     INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/plugins/ontop)
