--- a/trunk/plugins/yahoo/CMakeLists.txt
+++ b/trunk/plugins/yahoo/CMakeLists.txt
@@ -1,34 +1,37 @@
 #################
 # yahoo library #
 #################
+SET(yahoo_SRCS
+    crypt.cpp
+    yahoo.cpp
+    yahooauth.cpp
+    yahoocfg.cpp
+    yahooclient.cpp
+    yahoofiletransfer.cpp
+    yahoohttp.cpp
+    yahooinfo.cpp
+    yahoosearch.cpp
+    yahootransformtables.c
+)
+
+SET(yahoo_HDRS
+    yahoo.h
+    yahoocfg.h
+    yahooclient.h
+    yahooinfo.h
+    yahoosearch.h
+)
+
+SET(yahoo_UICS
+    yahoocfgbase.ui
+    yahooinfobase.ui
+    yahoosearchbase.ui
+)
+
+SET(yahoo_MESSAGE_SOURCES  ${yahoo_SRCS}  ${yahoo_UICS}  PARENT_SCOPE)
+
+
 if(OPENSSL_FOUND)
-    SET(yahoo_SRCS
-            crypt.cpp
-            yahoo.cpp
-            yahooauth.cpp
-            yahoocfg.cpp
-            yahooclient.cpp
-            yahoofiletransfer.cpp
-            yahoohttp.cpp
-            yahooinfo.cpp
-            yahoosearch.cpp
-            yahootransformtables.c
-    )
-    
-    SET(yahoo_HDRS
-            yahoo.h
-            yahoocfg.h
-            yahooclient.h
-            yahooinfo.h
-            yahoosearch.h
-    )
-    
-    SET(yahoo_UICS
-            yahoocfgbase.ui
-            yahooinfobase.ui
-            yahoosearchbase.ui
-    )
-    
     INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIR})
     LINK_DIRECTORIES(${OPENSSL_LIBRARY_DIR})
     SIM_ADD_PLUGIN(yahoo)
