--- a/trunk/plugins/zodiak/CMakeLists.txt
+++ b/trunk/plugins/zodiak/CMakeLists.txt
@@ -8,5 +8,6 @@ SET(zodiak_SRCS
 SET(zodiak_HDRS
         zodiak.h
 )
+SET(zodiak_MESSAGE_SOURCES  ${zodiak_SRCS}  ${zodiak_UICS}  PARENT_SCOPE)
 
 SIM_ADD_PLUGIN(zodiak)
