cmake's make update-messages: small improvements

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -230,40 +230,38 @@ IF ( ENABLE_TARGET_UPDATE_MESSAGES )
         COMMAND echo \"msgid \\\"\\\"\" > ${new_pot}.po
         COMMAND echo \"msgstr \\\"Content-Type: text/plain\; charset=UTF-8\\\"\" >> ${new_pot}.po
     )
+    FILE(RELATIVE_PATH plugins_dir_relative ${Sim-IM_SOURCE_DIR} ${Sim-IM_PLUGINS_SOURCE_DIR})
     LIST(SORT SIM_PLUGINS)
     FOREACH(plugin ${SIM_PLUGINS})
         ADD_CUSTOM_COMMAND(TARGET update-messages
             COMMAND echo Processing plugin ${plugin}
         )
-        ADD_CUSTOM_COMMAND(TARGET update-messages
-            COMMAND mkdir -p ${fake_ui_cpp_root}/plugins/${plugin}
-        )
         LIST(SORT ${plugin}_MESSAGE_SOURCES)
         FOREACH(file ${${plugin}_MESSAGE_SOURCES})
+            SET(relative_name "${plugins_dir_relative}/${plugin}/${file}")
             GET_FILENAME_COMPONENT(ext ${file} EXT)
             IF(ext STREQUAL .ui)
                 # creatig fake .cpp file where messages are located in the same lines as in .ui file
                 # and put it with the whole relative path to ${fake_ui_cpp_root}
                 ADD_CUSTOM_COMMAND(TARGET update-messages
-                    COMMAND echo "Extracting messages from  UI-file" plugins/${plugin}/${file}
+                    COMMAND echo "Extracting messages from  UI-file " ${relative_name}
                     COMMAND ${CMAKE_COMMAND}
-                       -D IN_FILE:STRING=${Sim-IM_PLUGINS_SOURCE_DIR}/${plugin}/${file}
-                       -D OUT_FILE:STRING=${fake_ui_cpp_root}/plugins/${plugin}/${file}
+                       -D IN_FILE:STRING=${Sim-IM_SOURCE_DIR}/${relative_name}
+                       -D OUT_FILE:STRING=${fake_ui_cpp_root}/${relative_name}
                        -P ${CMAKE_CURRENT_SOURCE_DIR}/cmake/UiToFakeCpp.cmake
                 )
                 # parsing fake .cpp file from the ${fake_ui_cpp_root} in order to get the same path as 
                 # path to the real .ui file
                 ADD_CUSTOM_COMMAND(TARGET update-messages
-                    COMMAND xgettext ${XGETTEXT_OPTIONS} -d${new_pot} plugins/${plugin}/${file}
+                    COMMAND xgettext ${XGETTEXT_OPTIONS} -d${new_pot} ${relative_name}
                     WORKING_DIRECTORY ${fake_ui_cpp_root}
                 )
             ELSEIF(ext STREQUAL .cpp)
                 # just parse .cpp file
-                FILE(RELATIVE_PATH rel_path ${Sim-IM_SOURCE_DIR} ${Sim-IM_PLUGINS_SOURCE_DIR}) 
-                SET(full_name "${rel_path}/${plugin}/${file}")
+                FILE(RELATIVE_PATH rel_path ${Sim-IM_SOURCE_DIR} ${Sim-IM_PLUGINS_SOURCE_DIR})
                 ADD_CUSTOM_COMMAND(TARGET update-messages
-                    COMMAND echo  Extracting messages from CPP-file ${full_name}
-                    COMMAND xgettext ${XGETTEXT_OPTIONS} -d${new_pot} ${full_name}
+                    COMMAND echo  Extracting messages from CPP-file ${relative_name}
+                    COMMAND xgettext ${XGETTEXT_OPTIONS} -d${new_pot} ${relative_name}
                     WORKING_DIRECTORY ${Sim-IM_SOURCE_DIR}
                 )
             ENDIF(ext STREQUAL .ui)
