--- a/trunk/plugins/icq/icq.vcproj
+++ b/trunk/plugins/icq/icq.vcproj
@@ -2674,6 +2674,10 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\icqlocation.h"
+				>
+			</File>
+			<File
 				RelativePath="icqmessage.h"
 				>
 				<FileConfiguration
